@@ -112,11 +112,13 @@
 	<menuitem name="GoBackDP" action="NavigationBack"/>
 	<menuitem name="GoForwardDP" action="NavigationForward"/>
 	<menuitem name="GoReloadDP" action="ViewReload"/>
-	<separator name="DPSep1"/>
+	<separator />
 	<menuitem name="EditCopyDP" action="EditCopy"/>
-	<separator name="DPSep2"/>
+	<separator />
 	<menuitem name="SavePageAsDP" action="FileSaveAs"/>
 	<menuitem name="BookmarkPageDP" action="ContextBookmarkPage"/>
+	<separator />
+	<menuitem name="OpenFrameFDP" action="OpenFrame"/>
 	<separator />
 	<menuitem name="OpenImageDP" action="OpenImage"/>
 	<menuitem name="SaveImageAsDP" action="SaveImageAs"/>
@@ -134,50 +136,14 @@
 	<menuitem name="SavePageAsFSDP" action="FileSaveAs"/>
 	<menuitem name="BookmarkPageFSDP" action="ContextBookmarkPage"/>
 	<separator />
+	<menuitem name="OpenFrameFSFDP" action="OpenFrame"/>
+	<separator />
 	<menuitem name="ViewToolbarFSDP" action="ViewToolbar"/>
 	<separator />
 	<menuitem name="OpenImageFSDP" action="OpenImage"/>
 	<menuitem name="SaveImageAsFSDP" action="SaveImageAs"/>
 	<menuitem name="SetImageAsBackgroundFSDP" action="SetImageAsBackground"/>
 	<menuitem name="CopyImageLocationFSDP" action="CopyImageLocation"/>
-</popup>
-
-<popup name="EphyFramedDocumentPopup" action="PopupAction">
-	<menuitem name="GoBackFDP" action="NavigationBack"/>
-	<menuitem name="GoForwardFDP" action="NavigationForward"/>
-	<menuitem name="GoReloadFDP" action="ViewReload"/>
-	<separator />
-	<menuitem name="EditCopyFDP" action="EditCopy"/>
-	<separator />
-	<menuitem name="SavePageAsFDP" action="FileSaveAs"/>
-	<menuitem name="BookmarkPageFDP" action="ContextBookmarkPage"/>
-	<separator />
-	<menuitem name="OpenFrameFDP" action="OpenFrame"/>
-	<separator />
-	<menuitem name="OpenImageFDP" action="OpenImage"/>
-	<menuitem name="SaveImageAsFDP" action="SaveImageAs"/>
-	<menuitem name="SetImageAsBackgroundFDP" action="SetImageAsBackground"/>
-	<menuitem name="CopyImageLocationFDP" action="CopyImageLocation"/>
-</popup>
-
-<popup name="EphyFullscreenFramedDocumentPopup" action="PopupAction">
-	<menuitem name="GoBackFSFDP" action="NavigationBack"/>
-	<menuitem name="GoForwardFSFDP" action="NavigationForward"/>
-	<menuitem name="GoReloadFSFDP" action="ViewReload"/>
-	<separator />
-	<menuitem name="EditCopyFSFDP" action="EditCopy"/>
-	<separator />
-	<menuitem name="SavePageAsFSFDP" action="FileSaveAs"/>
-	<menuitem name="BookmarkPageFSFDP" action="ContextBookmarkPage"/>
-	<separator />
-	<menuitem name="OpenFrameFSFDP" action="OpenFrame"/>
-	<separator />
-	<menuitem name="ViewToolbarFSFDP" action="ViewToolbar"/>
-	<separator />
-	<menuitem name="OpenImageFSFDP" action="OpenImage"/>
-	<menuitem name="SaveImageAsFSFDP" action="SaveImageAs"/>
-	<menuitem name="SetImageAsBackgroundFSFDP" action="SetImageAsBackground"/>
-	<menuitem name="CopyImageLocationFSFDP" action="CopyImageLocation"/>
 </popup>
 
 <popup name="EphyLinkPopup" action="PopupAction">
